fixed save button and overflow problem

--- a/src/styles/Resume.css
+++ b/src/styles/Resume.css
@@ -1,4 +1,9 @@
 .resume-container {
+    overflow-wrap: break-word;
+    word-break: break-word;
+    hyphens: auto;
+    display: flex;
+    flex-direction: column;
     width: 8.5in;
     height: 11.5in;
     border: 1px solid grey;
